# figmacalc

./: .gitignore  CMakeLists.txt  Calculator.h  Main.qml  README.md  calculator.cpp  main.cpp
android/: AndroidManifest.xml
content/: ActionButton.qml  ClearButton.qml  Display.qml  NormalButton.qml  NumberPad.qml
